# qt-labs

CatalogFilms/: .gitignore  CMakeLists.txt  README.md
CatalogFilms/include/: MainWindow.h  Movie.h  MovieDialog.h  MovieRepository.h  MovieService.h  MovieTableModel.h  MovieTableWidget.h  SearchManager.h  Settings.h  SettingsManager.h  SettingsRepository.h  SettingsWindow.h  ValidationService.h
CatalogFilms/src/: DatabaseManager.cpp  MainWindow.cpp  MovieDialog.cpp  MovieRepository.cpp  MovieService.cpp  MovieTableModel.cpp  MovieTableWidget.cpp  SearchManager.cpp  SettingsManager.cpp  SettingsRepository.cpp  SettingsWindow.cpp  ValidationService.cpp  main.cpp
CatalogFilms/ui/: MainWindow.ui  MovieDialog.ui  SettingsWindow.ui
Converter/: .gitignore  CMakeLists.txt  README.md  converter.cpp  converter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Helpdesk/: .gitignore  CMakeLists.txt  README.md
Helpdesk/src/: MainWindow.cpp  MainWindow.h  TicketDialog.h  TicketDialog.ui  TicketModel.cpp  TicketModel.h  main.cpp
Helpdesk_PR12/: CMakeLists.txt  README.md
Helpdesk_PR12/resources/: resources.qrc
Helpdesk_PR12/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  TicketDialog.cpp  TicketDialog.h  TicketTableModel.cpp  TicketTableModel.h
PasswordManager/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  passwordentry.h
PasswordManager19/: CMakeLists.txt  README.md  demo_main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  passwordleakchecker.h  passwordtablemodel.cpp  passwordtablemodel.h
PasswordManager20/: CMakeLists.txt  README.md  batchcheckresult.h  batchpasswordchecker.cpp  batchpasswordchecker.h  mainwindow.cpp  mainwindow.h  passwordleakchecker.cpp
QuickPad/: .gitignore  CMakeLists.txt  README.md
QuickPad/resources/: resources.qrc
QuickPad/src/: MainWindow.cpp  MainWindow.h  main.cpp
Scoreboard/Scoreboard/: .gitignore  CMakeLists.txt  README.md  main.cpp
TypingTrainer/: CMakeLists.txt  README.md
TypingTrainer/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui
TypingTrainer_PR10/: README.md
TypingTrainer_PR10/PasswordManager/: CMakeLists.txt  databasemanager.cpp  databasemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  passwordfilterproxymodel.cpp  passwordfilterproxymodel.h  passwordrepository.cpp  passwordrepository.h  passwordtablemodel.cpp  passwordtablemodel.h
TypingTrainer_PR10/lessons/: 01_Starter_Text.txt  02_Numbers_and_Symbols.txt  04_Python_Code.txt  05_Lorem_Ipsum.txt
TypingTrainer_PR10/resources/: resources.qrc
TypingTrainer_PR10/src/: MainWindow.cpp  MainWindow.h  main.cpp
TypingTrainer_PR7/: .gitignore
TypingTrainer_PR7/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  TextModel.cpp  main.cpp
TypingTrainer_PR8/: CMakeLists.txt  README.md
TypingTrainer_PR8/lessons/: 03_Common_Words_Part1.txt
TypingTrainer_PR8/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  TextModel.h
TypingTrainer_PR9/: CMakeLists.txt  README.md
TypingTrainer_PR9/lessons/: 06_Common_Words_Part2.txt
TypingTrainer_PR9/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  TextModel.cpp  TextModel.h
helpdesk13/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  ticketdialog.cpp  ticketdialog.ui  tickettablemodel.cpp  tickettablemodel.h
helpdesk14/: CMakeLists.txt  csvticketrepository.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
helpdesk15/: .gitignore  CMakeLists.txt  csvticketrepository.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ticket.h  ticketdialog.h  ticketfilterproxymodel.cpp  ticketfilterproxymodel.h  tickettablemodel.cpp  tickettablemodel.h
